--- a/revision/7-01-Databases/index.html
+++ b/revision/7-01-Databases/index.html
@@ -31,7 +31,7 @@
             <strong>Databases</strong> are used to store large amounts of data, organised into tables.
         </p>
 
-        <p>Table 1 shows an example table, called <code>Students</code>.</p>
+        <p>Table 1 shows some rows of an example table, called <code>Students</code>.</p>
 
         <p class="table">
             <img src="../icons/table.svg" class="icon" />
@@ -46,25 +46,25 @@
                 <th><strong>DateOfBirth</strong></th>
             </tr>
             <tr>
-                <td>0</td>
+                <td>1225</td>
                 <td>William</td>
                 <td>Smith</td>
                 <td>15/04/2009</td>
             </tr>
             <tr>
-                <td>1</td>
+                <td>1226</td>
                 <td>Sid</td>
                 <td>Chopra</td>
                 <td>04/11/2008</td>
             </tr>
             <tr>
-                <td>2</td>
+                <td>1227</td>
                 <td>Freddie</td>
                 <td>Brown</td>
                 <td>28/01/2009</td>
             </tr>
             <tr>
-                <td>3</td>
+                <td>1228</td>
                 <td>William</td>
                 <td>Jones</td>
                 <td>13/09/2008</td>
