--- a/revision/7-02-Select-Statements/index.html
+++ b/revision/7-02-Select-Statements/index.html
@@ -43,7 +43,7 @@
             Example 1 <br />
             <code>
                 <span class="keyword">SELECT</span> <span class="other">DateOfBirth</span>
-                <span class="keyword">FROM</span> <span class="other">Students</span>
+                <span class="keyword">FROM</span> <span class="function">Students</span>
             </code>
         </p>
 
@@ -56,7 +56,7 @@
             Example 2 <br />
             <code>
                 <span class="keyword">SELECT</span> <span class="other">FirstName</span>, <span class="other">DateOfBirth</span>
-                <span class="keyword">FROM</span> <span class="other">Students</span>
+                <span class="keyword">FROM</span> <span class="function">Students</span>
             </code>
         </p>
 
@@ -76,7 +76,7 @@
             <span class="answer">
                 <code>
                     <span class="keyword">SELECT</span> <span class="other">*</span>
-                    <span class="keyword">FROM</span> <span class="other">Students</span>
+                    <span class="keyword">FROM</span> <span class="function">Students</span>
                 </code>
             </span>
         </p>
