--- a/revision/7-04-Order-By/index.html
+++ b/revision/7-04-Order-By/index.html
@@ -39,7 +39,7 @@
             Example 1 <br />
             <code>
                 <span class="keyword">SELECT</span> <span class="other">*</span>
-                <span class="keyword">FROM</span> <span class="other">Students</span> <br />
+                <span class="keyword">FROM</span> <span class="function">Students</span> <br />
                 <span class="keyword">WHERE</span> <span class="other">FirstName</span>
                 = <span class="string">"William"</span> <br />
                 <span class="keyword">ORDER BY</span> <span class="other">LastName</span>
@@ -61,7 +61,7 @@
             <span class="answer">
                 <code>
                     <span class="keyword">SELECT</span> <span class="other">*</span>
-                    <span class="keyword">FROM</span> <span class="other">Students</span> <br />
+                    <span class="keyword">FROM</span> <span class="function">Students</span> <br />
                     <span class="keyword">WHERE</span> <span class="other">FirstName</span>
                     = <span class="string">"William"</span> <br />
                     <span class="keyword">ORDER BY</span> <span class="other">DateOfBirth</span>
