--- a/revision/7-06-Update-and-Delete/index.html
+++ b/revision/7-06-Update-and-Delete/index.html
@@ -37,9 +37,9 @@
             <img src="../icons/code.svg" class="icon" />
             Example 1 <br />
             <code>
-                <span class="keyword">UPDATE</span> <span class="other">Students</span> <br />
+                <span class="keyword">UPDATE</span> <span class="function">Students</span> <br />
                 <span class="keyword">SET</span> <span class="other">DateOfBirth</span> = <span class="number">04/12/2008</span> <br />
-                <span class="keyword">WHERE</span> <span class="other">StudentID</span> = <span class="number">1</span>
+                <span class="keyword">WHERE</span> <span class="other">StudentID</span> = <span class="number">1226</span>
             </code>
         </p>
 
@@ -60,8 +60,8 @@
             <img src="../icons/code.svg" class="icon" />
             Example 1 <br />
             <code>
-                <span class="keyword">DELETE FROM</span> <span class="other">Students</span> <br />
-                <span class="keyword">WHERE</span> <span class="other">StudentID</span> = <span class="number">3</span>
+                <span class="keyword">DELETE FROM</span> <span class="function">Students</span> <br />
+                <span class="keyword">WHERE</span> <span class="other">StudentID</span> = <span class="number">1228</span>
             </code>
         </p>
 
@@ -71,16 +71,16 @@
 
         <p class="question">
             <img src="../icons/question.svg" class="icon" />
-            Use the <code class="keyword small-code">UPDATE</code> command to subtract 1 from the <code class="other small-code">StudentID</code> of all records where it is greater than 2.
+            Use the <code class="keyword small-code">UPDATE</code> command to subtract 1 from the <code class="other small-code">StudentID</code> of all records where it is greater than 1227.
         </p>
 
         <p class="spoiler noselect">
             <span class="default">Tap/click to reveal</span>
             <span class="answer">
                 <code>
-                    <span class="keyword">UPDATE</span> <span class="other">Students</span> <br />
+                    <span class="keyword">UPDATE</span> <span class="function">Students</span> <br />
                     <span class="keyword">SET</span> <span class="other">StudentID</span> = <span class="other">StudentID</span> - <span class="number">1</span> <br />
-                    <span class="keyword">WHERE</span> <span class="other">StudentID</span> > <span class="number">2</span>
+                    <span class="keyword">WHERE</span> <span class="other">StudentID</span> > <span class="number">1227</span>
                 </code>
             </span>
         </p>
