--- a/revision/7-Summary-Questions/index.html
+++ b/revision/7-Summary-Questions/index.html
@@ -172,7 +172,7 @@
 
         <p class="question">
             <img src="../icons/question.svg" class="icon" />
-            Write a SQL statement to retrieve the StduentID, FirstName, LastName, Subject, and Percentage of any record
+            Write a SQL statement to retrieve the StudentID, FirstName, LastName, Subject, and Percentage of any record
             in the Grades table with a score of at least 70%. The results should be sorted by surname, A to Z. [5]
         </p>
 
