--- a/revision/index.html
+++ b/revision/index.html
@@ -138,7 +138,7 @@
             <li><a href="./7-05-Insert-Into/">7.05 - Insert Into</a></li>
             <li><a href="./7-06-Update-and-Delete/">7.06 - Update and Delete</a></li>
             <li><a href="./7-07-Relational-Databases/">7.07 - Relational Databases</a></li>
-            <li><a href="./7-Summary-Questions/">7.Summary - Questions</a></li>
+            <li><a href="./7-Summary-Questions/">Summary Questions</a></li>
         </ul>
 
         <br />
