--- a/404.html
+++ b/404.html
@@ -19,9 +19,9 @@
     </head>
 
     <body>
-        <h1 id="heading">Error 404 - Page Not Found</h1>
+        <h1 id="heading">Trying to redirect...</h1>
 
-        <p>Click <a href="/">here</a> to go to the homepage.</p>
+        <p>If that doesn't work, click <a href="/">here</a> to go to the homepage.</p>
         
         <br />
         <br />
