Set up Section 8

--- a/v1/index.html
+++ b/v1/index.html
@@ -141,6 +141,11 @@
             <li><a href="./7-Summary-Questions/">Summary Questions</a></li>
         </ul>
 
+        <h3><strong>Section 8 - Impacts of Computing</strong></h3>
+
+        <ul>
+        </ul>
+
         <br />
         <br />
 
