--- a/v1/8-01-Ethical-Issues/index.html
+++ b/v1/8-01-Ethical-Issues/index.html
@@ -23,10 +23,95 @@
         <h3 class="home-link"><a href="../">Computer Science Revision</a></h3>
         <br />
 
-        <a class="prev-link" href="../7-Summary-Questions/">Previous: 7.Summary - Questions</a>
+        <a class="prev-link" href="../7-Summary-Questions/">Previous: Section 7 Summary Questions</a>
         <br /> <br />
 
-        <!-- -->
+        <p>
+            In this section, we will be looking at the <b>ethical, legal, and environmental impacts</b> of technology.
+            This is the broadest section in the course, and the list of issues here is <b>by no means exhaustive</b>.
+            It is probable that you will get a 9-mark question on this section asking you to <b>"Discuss the ethical /
+            legal / environmental impacts of <i>x</i>"</b>, where <i>x</i> might be something like "autonomous
+            vehicles". In that case, you can use what is written on these pages, but you can also use your own
+            knowledge as well. <b>You will get marks for any relevant points</b>, as long as they are fully explained.
+        </p>
+
+        <p class="definition">
+            <img src="../icons/book.svg" class="icon" />
+            <strong>Ethical issues</strong> are about what is considered right and wrong by society.
+        </p>
+
+        <p>Here are some general ethical issues of technology:</p>
+
+        <ul class="less-padding-left">
+            <li>
+                Smartphones may have made us <b>more anti-social</b> as we spend more time communicating through screens
+                instead of talking face-to-face.
+            </li>
+            <li>
+                People can now be tracked through their devices, leading to many <b>privacy issues</b>.
+            </li>
+            <li>
+                There is also a greater opportunity for <b>identity theft</b>, given that we post so much personal
+                information online.
+            </li>
+            <li>
+                Robots are now <b>reducing the demand for lower-skilled jobs</b>, like moving boxes at Amazon fulfilment
+                centres.
+            </li>
+            <li>
+                Unequal access to technology has <b>increased the inequality</b> between richer and poorer nations.
+            </li>
+        </ul>
+
+        <p>Here are some ethical issues related to autonomous vehicles:</p>
+
+        <ul class="less-padding-left">
+            <li>
+                Many taxi drivers may <b>lose their jobs</b> as autonomous vehicles become more and more popular.
+            </li>
+            <li>
+                If there is a crash, <b>who is at fault</b>? The company? The programmer? The passenger?
+            </li>
+            <li>
+                <b>Who should the program prioritise</b> if it has to make a choice between saving two people's lives?
+            </li>
+        </ul>
+
+        <p>Here are some ethical issues related to the Internet:</p>
+
+        <ul class="less-padding-left">
+            <li>
+                People now have greater anonymity, which can enable <b>anti-social behaviour</b>.
+            </li>
+            <li>
+                For example, <b>cyber-bullying</b> is when someone uses the Internet to insult someone.
+            </li>
+            <li>
+                Organisations now <b>store a lot of our personal data</b> because of the Internet, and this can be
+                hacked into and leaked.
+            </li>
+            <li>
+                The Internet has enabled fraudsters to set up scams such as <b>pharming sites</b>, which we discussed in
+                Section 6.
+            </li>
+        </ul>
+
+        <p>Here are some ethical issues related to surveillance and censorship:</p>
+
+        <ul class="less-padding-left">
+            <li>
+                Government security services may be <b>monitoring internet traffic</b> to look for keywords alerting
+                them to illegal activities, which some people say is an infringement of privacy,
+            </li>
+            <li>
+                In some countries, Internet Service Providers are <b>legally required to share their customers' internet
+                history</b> wth security services.
+            </li>
+            <li>
+                Many governments also use some form of <b>censorship</b>, usually to protect children from inappropriate
+                sites, but this is a controversial topic.
+            </li>
+        </ul>
 
         <br />
 
@@ -34,13 +119,13 @@
 
         <p class="question">
             <img src="../icons/question.svg" class="icon" />
-            
+            What are the possible ethical issues of brain implants?
         </p>
 
         <p class="spoiler noselect">
             <span class="default">Tap/click to reveal</span>
             <span class="answer">
-                
+                There are privacy issues, as a lot of information may be extracted from your brain.
             </span>
         </p>
 
