Another ethical issue

--- a/v1/8-01-Ethical-Issues/index.html
+++ b/v1/8-01-Ethical-Issues/index.html
@@ -61,6 +61,10 @@
             <li>
                 Unequal access to technology has <b>increased the inequality</b> between richer and poorer nations.
             </li>
+            <li>
+                Electronic devices contain rare materials like gold and lithium, which are often extracted using
+                <b>child labour</b> in lower income countries.
+            </li>
         </ul>
 
         <p>Here are some ethical issues related to autonomous vehicles:</p>
