--- a/v1/8-02-Legal-Issues/index.html
+++ b/v1/8-02-Legal-Issues/index.html
@@ -26,7 +26,85 @@
         <a class="prev-link" href="../8-01-Ethical-Issues/">Previous: 8.01 - Ethical Issues</a>
         <br /> <br />
 
-        <!-- -->
+        <p class="definition">
+            <img src="../icons/book.svg" class="icon" />
+            <strong>Legal issues</strong> are about what is deemed right and wrong by the law.
+        </p>
+
+        <p>
+            The <b>Data Protection Act 2018</b> (the UK version of GDPR, the General Data Protection Regulation) governs
+            data collection, processing, and storage:
+        </p>
+
+        <ul class="less-padding-left">
+            <li>
+                Organisations must <b>only collect data for a specific purpose</b> and also make sure that the data is
+                accurate.
+            </li>
+            <li>
+                Data must <b>only be processed with the user's consent</b>, if there is a legal obligation to do so, or
+                other legitimate reasons.
+            </li>
+            <li>
+                Also, the data must <b>not be kept longer than necessary</b> or transferred to other countries unless
+                they can keep it protected.
+            </li>
+            <li>
+                The data must <b>be protected from unauthorised access</b>, but in the event of a data breach, the
+                customers must be told within 72 hours.
+            </li>
+        </ul>
+
+        <p>It also provides a number of rights for the customer, including:</p>
+
+        <ul class="less-padding-left">
+            <li>The right to <b>view data stored about you</b> by an organisation for free.</li>
+            <li>The right to <b>withdraw consent</b> (e.g. from mailing lists).</li>
+            <li>The right to <b>make changes to your data</b> if it is inaccurate.</li>
+            <li>The right to <b>delete all your personal data</b> from an organisation's servers.</li>
+        </ul>
+
+        <p>
+            <b>GDPR is being enforced.</b> Meta was fined €1.2bn (£1bn) in Ireland for transferring data to the United
+            States without enough data protection mechanisms in May 2023.
+        </p>
+
+        <p><br />The <b>Computer Misuse Act 1990</b> introduced four new offences:</p>
+
+        <ul class="less-padding-left">
+            <li>
+                <b>Making, supplying, or obtaining malware</b> which could be used to commit the following crimes
+                (maximum 2 years in prison).
+            </li>
+            <li>
+                <b>Unauthorised access to computer material</b>, like logging in to a network with someone else's
+                details (maximum 2 years in prison).
+            </li>
+            <li>
+                <b>Unauthorised modification of computer material</b>: deleting or changing files that are not your own
+                (maximum 2 years in prison).
+            </li>
+            <li>
+                <b>Unauthorised access in order to commit a crime</b>, like stealing data or destroying a network
+                (maximum 5 or 10 years in prison, depending on the crime).
+            </li>
+        </ul>
+
+        <p><br />The <b>Copyright, Designs and Patents Act 1988</b> protects creations from being copied:</p>
+
+        <ul class="less-padding-left">
+            <li>
+                If you invent something and receive a patent, this Act <b>prevents anyone else from using the
+                invention</b> without your permission for 20 years.
+            </li>
+            <li>
+                If you write a book, create a video, compose some music, or make a piece of software, this Act <b>lets
+                you decide how your work should be used</b> for 70 years, or until your death.
+            </li>
+            <li>
+                Copyright infringement <b>can result in fines or up to 10 years in prison</b>.
+            </li>
+        </ul>
 
         <br />
 
@@ -34,13 +112,21 @@
 
         <p class="question">
             <img src="../icons/question.svg" class="icon" />
-            
+            An employee of a web design company has lost his job and is very upset. Before he leaves, he does the following actions:
+            <ul class="small-code">
+                <li>Logs in to a computer with a colleague's username and password</li>
+                <li>Copies logos and other graphics from there onto his USB stick</li>
+                <li>Downloads a list of all the company's clients and their contact details</li>
+            </ul>
+            <p class="question">Which laws has he broken?</p>
         </p>
 
         <p class="spoiler noselect">
             <span class="default">Tap/click to reveal</span>
             <span class="answer">
-                
+                The Computer Misuse Act 1990 (for logging in without permission) <br />
+                The Copyright, Designs and Patents Act 1988 (for copying the graphics) <br />
+                The Data Protection Act 2018 (for accessing personal details)
             </span>
         </p>
 
