--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
     <body>
         <h1 id="heading">Trying to redirect...</h1>
 
-        <p>If that doesn't work, click <a href="/">here</a> to go to the homepage.</p>
+        <p id="text" hidden>Click <a href="/">here</a> to go to the homepage.</p>
         
         <br />
         <br />
