--- a/v1/2A-Summary-Questions/index.html
+++ b/v1/2A-Summary-Questions/index.html
@@ -139,13 +139,18 @@
 
         <p class="question">
             <img src="../icons/question.svg" class="icon" />
-            What is the output of <code class="small-code">NOT(5 ≤ 9 AND 4 > 7) OR (6 ≠ 2 AND 8 &lt; 1)</code>? [1]
+            What is the output of <code class="small-code">
+                <span class="other">NOT</span>(<span class="number">5</span> ≥ <span class="number">9</span>
+                <span class="other">OR</span> <span class="number">4</span> &gt; <span class="number">7</span>)
+                <span class="other">XOR</span> (<span class="number">6</span> ≠ <span class="number">2</span> 
+                <span class="other">AND</span> <span class="number">8</span> &lt; <span class="number">1</span>)
+            </code>? [1]
         </p>
 
         <p class="spoiler noselect">
             <span class="default">Tap/click to reveal</span>
             <span class="answer">
-                False &check;
+                <code class="number">True</code> &check;
             </span>
         </p>
 
