Update OpenGraph image

--- a/v2/index.html
+++ b/v2/index.html
@@ -7,9 +7,9 @@
         <title>Home | Computer Science Revision</title>
 
         <link rel="icon" type="image/png" href="./logos/square.png"/>
-        <meta property="og:image" content="./logos/banner.png" />
-        <meta property="og:image:width" content="3675" />
-        <meta property="og:image:height" content="1164" />
+        <meta property="og:image" content="./logos/square.png" />
+        <meta property="og:image:width" content="880" />
+        <meta property="og:image:height" content="880" />
 
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
