--- a/v2/index.html
+++ b/v2/index.html
@@ -4,7 +4,7 @@
     <head>
         <link rel="stylesheet" href="./main.css">
 
-        <title>Home | Computer Science Revision</title>
+        <title>Index | CS.RN v2</title>
 
         <link rel="icon" type="image/png" href="./logos/square.png"/>
         <meta property="og:image" content="./logos/square.png" />
@@ -14,7 +14,7 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Computer Science Revision is an online, mobile-friendly revision guide for GCSE Computer Science students.">
+        <meta name="description" content="CS.RN v2 is the second version of an online, mobile-friendly revision guide for GCSE and A Level Computer Science students.">
     </head>
 
     <body>
@@ -27,49 +27,49 @@
                 <div class="section-flexbox">
                     <a href="./1/" class="no-underline section-link">
                         <h1>Section 1</h1>
-                        <p>Algorithms <em>(9 pages)</em></p>
+                        <p>Algorithms</p>
                     </a>
                 </div>
                 <div class="section-flexbox">
                     <a href="./2/" class="no-underline section-link">
                         <h1>Section 2</h1>
-                        <p>Programming <em>(17 pages)</em></p>
+                        <p>Programming</p>
                     </a>
                 </div>
                 <div class="section-flexbox">
                     <a href="./3/" class="no-underline section-link">
                         <h1>Section 3</h1>
-                        <p>Data Representation <em>(10 pages)</em></p>
+                        <p>Data Representation</p>
                     </a>
                 </div>
                 <div class="section-flexbox">
                     <a href="./4/" class="no-underline section-link">
                         <h1>Section 4</h1>
-                        <p>Computer Systems <em>(18 pages)</em></p>
+                        <p>Computer Systems</p>
                     </a>
                 </div>
                 <div class="section-flexbox">
                     <a href="./5/" class="no-underline section-link">
                         <h1>Section 5</h1>
-                        <p>Computer Networks <em>(5 pages)</em></p>
+                        <p>Computer Networks</p>
                     </a>
                 </div>
                 <div class="section-flexbox">
                     <a href="./6/" class="no-underline section-link">
                         <h1>Section 6</h1>
-                        <p>Cyber Security <em>(5 pages)</em></p>
+                        <p>Cyber Security</p>
                     </a>
                 </div>
                 <div class="section-flexbox">
                     <a href="./7/" class="no-underline section-link">
                         <h1>Section 7</h1>
-                        <p>Structured Query Language <em>(7 pages)</em></p>
+                        <p>Structured Query Language</p>
                     </a>
                 </div>
                 <div class="section-flexbox">
                     <a href="./8/" class="no-underline section-link">
                         <h1>Section 8</h1>
-                        <p>Impacts of Computing <em>(3 pages)</em></p>
+                        <p>Impacts of Computing</p>
                     </a>
                 </div>
             </div>
@@ -81,73 +81,73 @@
                 <div class="section-flexbox disabled">
                     <a href="./9/" class="no-underline section-link">
                         <h1>Section 9</h1>
-                        <p>Programming <em>(under construction)</em></p>
+                        <p>Programming <em>(in progress)</em></p>
                     </a>
                 </div>
                 <div class="section-flexbox disabled">
                     <a href="./10/" class="no-underline section-link">
                         <h1>Section 10</h1>
-                        <p>Problem Solving <em>(under construction)</em></p>
+                        <p>Problem Solving <em>(in progress)</em></p>
                     </a>
                 </div>
                 <div class="section-flexbox disabled">
                     <a href="./11/" class="no-underline section-link">
                         <h1>Section 11</h1>
-                        <p>Data Representation <em>(under construction)</em></p>
+                        <p>Data Representation <em>(in progress)</em></p>
                     </a>
                 </div>
                 <div class="section-flexbox disabled">
                     <a href="./12/" class="no-underline section-link">
                         <h1>Section 12</h1>
-                        <p>Hardware and Software <em>(under construction)</em></p>
+                        <p>Hardware and Software <em>(in progress)</em></p>
                     </a>
                 </div>
                 <div class="section-flexbox disabled">
                     <a href="./13/" class="no-underline section-link">
                         <h1>Section 13</h1>
-                        <p>Computer Architecture <em>(under construction)</em></p>
+                        <p>Computer Architecture <em>(in progress)</em></p>
                     </a>
                 </div>
                 <div class="section-flexbox disabled">
                     <a href="./14/" class="no-underline section-link">
                         <h1>Section 14</h1>
-                        <p>Communication <em>(under construction)</em></p>
+                        <p>Communication <em>(in progress)</em></p>
                     </a>
                 </div>
                 <div class="section-flexbox disabled">
                     <a href="./15/" class="no-underline section-link">
                         <h1>Section 15</h1>
-                        <p>Data Structures <em>(under construction)</em></p>
+                        <p>Data Structures <em>(in progress)</em></p>
                     </a>
                 </div>
                 <div class="section-flexbox disabled">
                     <a href="./16/" class="no-underline section-link">
                         <h1>Section 16</h1>
-                        <p>Algorithms <em>(under construction)</em></p>
+                        <p>Algorithms <em>(in progress)</em></p>
                     </a>
                 </div>
                 <div class="section-flexbox disabled">
                     <a href="./17/" class="no-underline section-link">
                         <h1>Section 17</h1>
-                        <p>Regular Languages <em>(under construction)</em></p>
+                        <p>Regular Languages <em>(in progress)</em></p>
                     </a>
                 </div>
                 <div class="section-flexbox disabled">
                     <a href="./18/" class="no-underline section-link">
                         <h1>Section 18</h1>
-                        <p>The Internet <em>(under construction)</em></p>
+                        <p>The Internet <em>(in progress)</em></p>
                     </a>
                 </div>
                 <div class="section-flexbox disabled">
                     <a href="./19/" class="no-underline section-link">
                         <h1>Section 19</h1>
-                        <p>Databases <em>(under construction)</em></p>
+                        <p>Databases <em>(in progress)</em></p>
                     </a>
                 </div>
                 <div class="section-flexbox disabled">
                     <a href="./20/" class="no-underline section-link">
                         <h1>Section 20</h1>
-                        <p>Object-Oriented Programming <em>(under construction)</em></p>
+                        <p>Object-Oriented Programming <em>(in progress)</em></p>
                     </a>
                 </div>
             </div>
@@ -155,7 +155,8 @@
         </div>
         <div id="footer"></div>
 
-        <script src="./scripts/header.js"></script>
+        <script>let v1 = "";</script>
+        <script src="./scripts/version.js"></script>
 
     </body>
 </html>
