--- a/v2/4/index.html
+++ b/v2/4/index.html
@@ -143,6 +143,7 @@
 
         <script>let v1 = null;</script>
         <script src="../scripts/version.js"></script>
+        <script src="../scripts/footer.js"></script>
 
     </body>
 </html>
