--- a/v2/index.html
+++ b/v2/index.html
@@ -157,6 +157,7 @@
 
         <script>let v1 = "";</script>
         <script src="./scripts/version.js"></script>
+        <script src="./scripts/footer.js"></script>
 
     </body>
 </html>
