--- a/v1/index.html
+++ b/v1/index.html
@@ -20,6 +20,8 @@
 
     <body>
         <h1>Computer Science Revision</h1>
+
+        <input type="button" value="v1 → v2" id="v2-button" />
         
 
         <h3><strong>Section 1 - Algorithms</strong></h3>
@@ -155,5 +157,6 @@
 
         <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../year.js"></script>
+        <script src="./v2-button.js"></script>
     </body>
 </html>
