--- a/v2/1/01/index.html
+++ b/v2/1/01/index.html
@@ -14,7 +14,7 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Study 1.01 (Computational Thinking) on CS.RN v2, the best place to revise for your GCSE Computer Science exam.">
+        <meta name="description" content="This page contains the basics of Computational Thinking, including definitions for abstraction and decomposition, for GCSE Computer Science on CS.RN v2.">
     </head>
 
     <body>
