--- a/v2/1/01/index.html
+++ b/v2/1/01/index.html
@@ -68,7 +68,7 @@
                 Why do we use decomposition?
             </p>
     
-            <p class="summary-question noselect">
+            <p class="summary-question">
                 <span class="answer">The problem becomes easier to solve when it consists of a number of smaller subtasks.</span>
             </p>
 
