--- a/v2/1/02/index.html
+++ b/v2/1/02/index.html
@@ -152,7 +152,7 @@
                 What does the code in Example 5 do?
             </p>
     
-            <p class="summary-question noselect">
+            <p class="summary-question">
                 <span class="answer">Multiplies all the even numbers from 1 to 10 and outputs the result.</span>
             </p>
 
