--- a/v2/1/03/index.html
+++ b/v2/1/03/index.html
@@ -73,7 +73,7 @@
                 What does Diagram 4 do?
             </p>
     
-            <p class="summary-question noselect">
+            <p class="summary-question">
                 <span class="answer">Finds and outputs the index of an item in a list, or -1 if not found.</span>
             </p>
 
