--- a/v2/glossary/all/index.html
+++ b/v2/glossary/all/index.html
@@ -47,6 +47,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Binary search</strong> is a more efficient searching algorithm which only works on sorted lists.
             </p>
+            <p class="definition" page="1.07">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Bubble sort</strong> is a simple sorting algorithm.
+            </p>
             <!-- C -->
             <p class="definition" page="1.01">
                 <img src="../../icons/book.svg" class="icon" />
@@ -78,6 +82,10 @@
                 <strong>Linear search</strong> is a searching algorithm which checks each item in order.
             </p>
             <!-- M -->
+            <p class="definition" page="1.08">
+                <img src="../icons/book.svg" class="icon" />
+                <strong>Merge sort</strong> is a more complicated but sometimes more efficient sorting algorithm.
+            </p>
             <!-- N -->
             <!-- O -->
             <!-- P -->
@@ -99,6 +107,10 @@
             <p class="definition" page="1.02">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Sequence</strong> is just a matter of writing of writing down the steps in the correct order.
+            </p>
+            <p class="definition" page="1.07">
+                <img src="../../icons/book.svg" class="icon" />
+                A <strong>sorting algorithm</strong> is an algorithm to put the items of a list in order.
             </p>
             <!-- T -->
             <!-- U -->
