--- a/v2/glossary/all/index.html
+++ b/v2/glossary/all/index.html
@@ -83,7 +83,7 @@
             </p>
             <!-- M -->
             <p class="definition" page="1.08">
-                <img src="../icons/book.svg" class="icon" />
+                <img src="../../icons/book.svg" class="icon" />
                 <strong>Merge sort</strong> is a more complicated but sometimes more efficient sorting algorithm.
             </p>
             <!-- N -->
