First 5 pages of Section 2

--- a/v2/glossary/all/index.html
+++ b/v2/glossary/all/index.html
@@ -21,7 +21,8 @@
 
         <div id="header"><a href="/"><img id="logo" alt="CS.RN v2" /></a></div>
         <div id="page">
-            <p>See also: <a href="https://quizlet.com/user/nayakrujul/folders/computer-science-key-terms">the Quizlet Set</a>.</p>
+            <p>See also: <a href="https://quizlet.com/user/nayakrujul/folders/computer-science-key-terms">the Quizlet Sets</a>.</p>
+            <p>There are <b id="num-here">&infin;</b> definitions on this page.</p>
             <p id="sort">
                 Sort: <span id="select">
                     <span value="a-z" class="toggle active">A-Z</span>
@@ -42,6 +43,10 @@
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Algorithmic thinking</strong> means taking logical steps to get from the problem to the solution.
             </p>
+            <p class="definition" page="2.05">
+                <img src="../../icons/book.svg" class="icon" />
+                An <strong>array</strong> is a data structure that can store a group of data of the same type under a single identifier.
+            </p>
             <!-- B -->
             <p class="definition" page="1.05">
                 <img src="../../icons/book.svg" class="icon" />
@@ -56,7 +61,23 @@
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Computational thinking</strong> is all about the steps you take to find the best solution to a complex problem.
             </p>
+            <p class="definition" page="2.01">
+                <img src="../../icons/book.svg" class="icon" />
+                A <strong>constant</strong> is a special type of variable whose value does not change as the program runs.
+            </p>
             <!-- D -->
+            <p class="definition" page="2.05">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Data structures</strong> are formats for storing data - like arrays, records, and files.
+            </p>
+            <p class="definition" page="2.02">
+                <img src="../../icons/book.svg" class="icon" />
+                The <strong>data type</strong> of a variable determines how its binary form in memory is interpreted.
+            </p>
+            <p class="definition" page="2.01">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Declaring</strong> a variable means setting its value for the first time.
+            </p>
             <p class="definition" page="1.01">
                 <img src="../../icons/book.svg" class="icon" />
                 <strong>Decomposition</strong> is the process of breaking down a complex problem into smaller problems and solving each one individually.
@@ -88,6 +109,10 @@
             </p>
             <!-- N -->
             <!-- O -->
+            <p class="definition" page="2.03">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Operators</strong> in Computer Science are just like operators in Maths: they are symbols which perform certain functions on data.
+            </p>
             <!-- P -->
             <p class="definition" page="1.02">
                 <img src="../../icons/book.svg" class="icon" />
@@ -112,9 +137,17 @@
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>sorting algorithm</strong> is an algorithm to put the items of a list in order.
             </p>
+            <p class="definition" page="2.04">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Strings</strong> are collections of characters.
+            </p>
             <!-- T -->
             <!-- U -->
             <!-- V -->
+            <p class="definition" page="2.01">
+                <img src="../../icons/book.svg" class="icon" />
+                <strong>Variables</strong> are named references to locations in memory for temporarily storing data while a program is running.
+            </p>
             <!-- W -->
             <!-- X -->
             <!-- Y -->
